# blunder-board

./: .gitignore  README.md  blunderboard.go  deploy.sh  go.mod  lichess_pgn_2021.08.06_spongeboy_ahoy_vs_tomlx.uRulHisz.pgn  request_test.py  rest_api.py  setup.cfg  spongeboyahoy_vs_tomlx.pgn
blunderboard-py/: blunderboard.py  requirements.txt
src/blunderboard/: __init__.py  blunderboard.py  blunderevaluator.py  boardreader.py  movegenerator.py
