[metadata]
name = blunderboard
version = 0.0.1
author = 0x90.space
author_email = people@schleuder.0x90.space
description = Blunderboard
url = https://git.0x90.space/0x90/blunderboard
project_urls =
    Bug Tracker = https://git.0x90.space/0x90/blunderboard/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: POSIX :: Linux
    Topic :: Games/Entertainment :: Board Games

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pygame
    RPi.GPIO
    stockfish

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    blunderboard = blunderboard:main

[tox:tox]
envlist = lint
isolated_build = True

[testenv:lint]
skip_install = True
deps =
    black
    flake8
    mypy
commands =
    black --check --diff src
    flake8 src
    mypy src

#[testenv]
#deps =
#    pytest
#commands =
#    pytest tests

[flake8]
max_line_length = 88

[mypy]
ignore_missing_imports = True
